mssql-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    description: Defines how to deploy the database server
  name: mssql
spec:
  replicas: 1
  selector:
    name: mssql
  strategy:
    type: Recreate
  template:
    metadata:  
      labels:
        name: mssql
      name: mssql
    spec:
      containers:
      - env:
        - name: ACCEPT_EULA
          value: "Y"
        - name: MSSQL_PID
          value: Developer
        - name: SA_PASSWORD
          valueFrom:
            secretKeyRef:
              key: SA_PASSWORD
              name: mssql-secret
        - name: MSSQL_SERVICE
          valueFrom:
            secretKeyRef:
              key: SERVICE_NAME
              name: mssql-secret
        image: mcr.microsoft.com/mssql/rhel/server:2019-latest
        name: db
        ports:
        - containerPort: 1433
        volumeMounts:
        - mountPath: /var/opt/mssql
          name: mssql-data
        - mountPath: /tmp
          name: tempdir
      volumes:
      - name: mssql-data
        persistentVolumeClaim:
          claimName: "$(MSSQL_PVC_NAME)"
      - name: tempdir
        emptyDir: {}
