ncs-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: netcandystore
  name: netcandystore
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: netcandystore
  sessionAffinity: None
  type: ClusterIP
