service-getcategories.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: getcategories
  name: getcategories
  namespace: netcandystore
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: getcategories
    deploymentconfig: getcategories
  sessionAffinity: None
  type: ClusterIP
