service-mssql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql
  namespace: netcandystore-prd
spec:
  ports:
  - name: tcp
    port: 1433
    protocol: TCP
    targetPort: 1433
  selector:
    name: mssql
  sessionAffinity: None
  type: ClusterIP
